BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Field_Medical_Insights_BMS__c.object
<CustomObject>
    <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom object to store insights captured by the field medical team.</description>
    <fields>
        <fullName>Aligned_to_Key_Insight_Topic_KIT_BMS_IC__c</fullName>
        <description>Topics that a Key Insight can be related to - IC specific to allow for Product/KIT Dependency</description>
        <label>Aligned to Key Insight Topic (KIT)</label>
        <picklist>
            <controllingField>Product_BMS_CAN__c</controllingField>
            <picklistValues>
                <fullName>Adjuvant Melanoma Landscape/Treatment Paradigms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Melanoma Landscape/Treatment Paradigms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algorithm placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>anti CD-137 (melanoma, RCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anticoagulation therapy in AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apixaban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR antagonist (prostate cancer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASENAPINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biomarkers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biomarkers &amp; Diagnostics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biomarkers of depression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bipolar Maintenance Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brivanib alaninate (VEGFR/FGFR inhibitor) (solid tumors: HCC, CRC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARIPRAZINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical trials (information on)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CML Landscape/Treatment Paradigms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPETITOR ACTIVITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitors (Factor Xa Inhibitors and DTIs) in AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV outcomes and LCM studies w. DPP-4is and GLP-1s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darunavir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depression landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISEASE STATE/SPECIAL POPULATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dolutegravir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dopamine As A Unique Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education and Awareness</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Product_BMS_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - September 2013 - BMS EMEA Requirements &amp; Design: Custom field to store if a FMI record is in relation to a competitor product.</description>
        <label>Competitor Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_BMS_IC__c</fullName>
        <formula>$User.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exploratory_Development_Compound_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the available exploratory development compounds that can be related to a field medical insight.</description>
        <label>Exploratory Development Compound</label>
        <picklist>
            <picklistValues>
                <fullName>11βHSD Inhibitors (Diabetes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha-7 Nicotinic agonist (pain)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha-7 Nicotonic/mGluR5 PAM (cog/neg symptoms)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-CD137 Antibody (Cancer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB1 Antagonist (Obesity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR2 Antagonist (CV/Met)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGRP antagonist (migraine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta PKC Inhibitor (Cardiovascular)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGAT Inhibitors (CV / Met)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPP4 Inhibitor (Diabetes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GABA-nicotinic mod (pain)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gamma/MT Stabilizer/Abeta mod (Alzheimer&apos;s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucokinase Activator (Diabetes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR Agonists (Immunology)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV Inhibitor Target 1 (Hepatitis C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV Inhibitor Target 2 (Hepatitis C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV Inhibitor Target 3 (Hepatitis C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV Interferons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV NS3/4A Protease Inhibitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV NS5A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV NS5B Polymerase Inhibitor (Nuc or Non-Nuc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV other cmpds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV Attachment Inhibitor (HIV/AIDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV Integrase Inhibitor (HIV/AIDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LXR Agonist (Atherosclerosis)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microtubule Stabilizer (Alzheimer&apos;s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC-14597/Depot (Schizophrenia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC-34712 (Schizophrenia, ADHD, adj in MDD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>p38 Kinase Inhibitors (Rheumatoid Arthritis)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCSK9 Inhibitor (Cardiovascular)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Development_Product_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the available full development products that can be related to a field medical insight.</description>
        <label>Full Development Product-Registrational</label>
        <picklist>
            <picklistValues>
                <fullName>Apixaban (Thrombosis)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brivanib (Cancer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dapagliflozin (Diabetes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elotuzumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kombiglyze XR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-PD-1 mAb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Necitumumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGF-1R/IR inhibitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nivolumab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Insight_Topics_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the topics that a key insight can be related to.</description>
        <label>Key Insight Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Abilify - ASENAPINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - Bipolar Maintenance Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABILIFY - Bipolar Maintenance Trials:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - BMS Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - CARIPRAZINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - DSM 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - LURASIDONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - MDD: General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - MDD:  General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - Medical Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABILIFY - OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - Other (Please Specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - Payer Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - PEDIATRICS: General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - QUETIAPINE XR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - Regulatory and Patent Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilify - Revised APA Guidelines for MDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTI PLATELET - Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTI PLATELET - Prasugrel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTI PLATELET - Proton Pump Inhibitors (PPI) and Plavix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIXABAN - Access of NOACs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apixaban - Anticoagulation therapy in AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apixaban - Apixaban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIXABAN - Bleeding Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIXABAN - Competitor Data Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apixaban - Competitors (Factor Xa Inhibitors and DTIs) in AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIXABAN - Differentiation between Eliquis and other Anticoagulants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIXABAN - Eliquis Data Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apixaban - Other (Please Specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIXABAN - Other Key Topics (e.g. Guidelines, Publications)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Life_Cycle_Management_Product_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the life cycle management product that a key insight can be related to.</description>
        <label>Life Cycle Management Product</label>
        <picklist>
            <picklistValues>
                <fullName>ABILIFY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVAPRO / AVALIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARACLUDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDUREON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELIQUIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERBITUX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IXEMPRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULOJIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORENCIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLAVIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RECOTHROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REYATAZ / SUSTIVA / ATRIPLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRYCEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YERVOY</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Insight_Source_Type_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the source of a field medical insight.</description>
        <label>Medical Insight Source Type</label>
        <picklist>
            <controllingField>Life_Cycle_Management_Product_BMS__c</controllingField>
            <picklistValues>
                <fullName>Allied Health Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Practice/Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulary Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hematology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Insight_Stakeholder_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the stakeholder related to a field medical insight.</description>
        <label>Medical Insight Stakeholder</label>
        <picklist>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Access / Managed Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEOR</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Notes_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture additional notes for a field medical insight.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Key_Insight_Topics_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture other key insight topics.</description>
        <label>Other Key Insight Topics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Medical_Insight_Source_Type_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture other field medical insight source types.</description>
        <label>Other Medical Insight Source Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Type_of_Medical_Insight_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture other types of field medical insights.</description>
        <label>Other Type of Medical Insight</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_BMS_CAN__c</fullName>
        <description>Used for selecting Product while creating a Intercon based Field Medical Insight</description>
        <label>Product</label>
        <picklist>
            <controllingField>Therapeutic_Area_BMS_IC__c</controllingField>
            <picklistValues>
                <fullName>11βHSD Inhibitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABILIFY® (aripiprazole)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-CD28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-CD40L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-CD70 ADC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-CXCR4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-IL31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-IL6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-IP10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-KIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-LAG3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-PD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-PD-L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asunaprevir (NS3 Inhibitor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATRIPLA® (efavirenz/emtricitabine/tenofovir disoproxil fumarate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avagacestat (Gamma Secretase Inhibitor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVALIDE® (irbesartan hydrochlorothiazide)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVAPRO® (irbesartan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aβ Modulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARACLUDE® (entecavir)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BICNU® (carmustine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brivanib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSPAR® (buspirone hydrochloride)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR1 Antagonists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR2 / 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEENU® (lomustine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGRP Antagonist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COUMADIN® (warfarin sodium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVMet General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daclatasvir (NS5A inhibitor)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF((CreatedBy.Profile.Name=&quot;BMS-SPEC11-MGR-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC11-REP-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC12-MGR-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC12-REP-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC13-MGR-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC13-REP-MSL&quot;),&quot;PR&quot;,&quot;US&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sphere_of_Influence_BMS__c</fullName>
        <label>Sphere of Influence</label>
        <picklist>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payer/Government/Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Strategy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_BMS_EMEA__c</fullName>
        <description>VPRO - September 2013 - BMS EMEA Requirements &amp; Design: Custom field to track the status of a FMI record as it is routed through the approval process.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_BMS_IC__c</fullName>
        <description>Theraputic area related to Field medical Insights for Intercon users.</description>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>CVMet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mature Brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virology</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture a therapeutic area related to field medical insights.</description>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vr</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Medical_Insight_BMS_IC__c</fullName>
        <description>Single Picklist (Intercon) for the Capture of Field Medical insight type.</description>
        <label>Type of Medical Insight</label>
        <picklist>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical trial - Investigational compound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical trial - Marketed brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Practice / Treatment Patterns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry News / Sales / Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please Specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outcomes / Pharmacoeconomics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Perception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory/Filings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmet Medical Need</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Medical_Insight_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the type of field medical insight.</description>
        <label>Type of Medical Insight</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Trial: Investigational Compound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial: Marked Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry News / Sales / Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory / Filings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Practice / Treatment Patterns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Perception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmet Medical Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Field Medical Insight</label>
    <listViews>
        <fullName>All_Field_Medical_Insights</fullName>
        <columns>NAME</columns>
        <columns>Therapeutic_Area_BMS__c</columns>
        <columns>Type_of_Medical_Insight_BMS__c</columns>
        <columns>Medical_Insight_Source_Type_BMS__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Field Medical Insights</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Field_Medical_Insights</fullName>
        <columns>NAME</columns>
        <columns>Therapeutic_Area_BMS__c</columns>
        <columns>Type_of_Medical_Insight_BMS__c</columns>
        <columns>Medical_Insight_Source_Type_BMS__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Field Medical Insights</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FMI-{0000}</displayFormat>
        <label>Field Medical Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Medical Insights</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_FMI</fullName>
        <active>true</active>
        <description>Used for EMEA field User</description>
        <label>BMS - EMEA - FMI</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Intercon_SA_FMI</fullName>
        <active>true</active>
        <description>Used for BMS SA Intercon Field Users</description>
        <label>BMS-Intercon-SA-FMI</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_US_FMI</fullName>
        <active>true</active>
        <description>Used for BMS US Field Users</description>
        <label>BMS-US-FMI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>